# LearnOpenGL

./: .gitmodules  CMakeLists.txt  README.md
Resources/Shaders/: fragment.glsl  vertex.glsl
src/: main.cpp
src/Camera/: Camera.hpp
src/Objects/: ElementArray.hpp  VertexArray.hpp  VertexBuffer.hpp
src/Shader/: Shader.cpp  Shader.hpp
src/Texture/: Texture.cpp  Texture.hpp
